Implement next and previous button functionality

--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
 <body>
     <div class="container my-4">
         <div id="photoBooth" class="text-center bg-white p-3 rounded shadow-sm mx-auto">
-            <h1 class="banner mb-3">IS219 Slide Show</h1>
+            <h1 class="banner mb-3">IS219 Slide Show (Fortnite Maps)</h1>
             <div id="slideShow" class="row justify-content-center">
 
                 <!-- Photo Holder Section -->
                 <div class="col-12 col-md-8 photoHolder mb-3">
                     <img class="thumbnail img-fluid" id="photo"
-                        src="https://via.placeholder.com/518x389?text=Welcome+to+my+Gallery" alt="Gallery Image" />
+                        src="img/places/dustydivot.jpg" alt="Gallery Image" />
                 </div>
 
                 <!-- More Indicator and Navigation Controls -->
